--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt": "^1.6.1",
     "grunt-contrib-imagemin": "^4.0.0",
     "grunt-contrib-sass": "^2.0.0",
+    "grunt-contrib-uglify": "^5.2.2",
     "grunt-contrib-watch": "^1.1.0",
     "sass": "^1.58.3"
   }
